<resources>
    <string name="app_name">AkaiMovies</string>

    <!--FRAGMENTS-->
    <string name="search_movie_fragment">FavoriteMovieFragment</string>
    <string name="favorite_movie_fragment">SearchMovieFragment</string>
    <string name="movie_details_fragment">MovieDetailsFragment</string>
    <string name="search_view_text">Wyszukaj</string>
    <string name="back_text">Powróć</string>
    <string name="year">Year: %1$s</string>
    <string name="rated">Rated: %1$s</string>
    <string name="released">Released: %1$s</string>
    <string name="genre">Genre: %1$s</string>
    <string name="director">Director %1$s</string>
    <string name="runtime">Runtime: %1$s</string>
    <string name="writer">Writer: %1$s</string>
    <string name="actors">Actors: %1$s</string>
    <string name="metascore">Metascore: %1$s</string>
    <string name="dvd">Dvd: %1$s</string>
    <string name="box_office">Box office: %1$s</string>
    <string name="production">Production: %1$s</string>
    <string name="website">Website: %1$s</string>
    <string name="movie_title">Type title</string>
    <string name="movies_not_found">Movies not found</string>
    <string name="no_favorite_movies">No favorite movies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="wrongEmailOrPassword">"Wrong email and/or password"</string>
    <string name="accountCreated">Account created.</string>
    <string name="weakPassword">Password must be at least 6 characters long.</string>
    <string name="invalidCredentials">Wrong email.</string>
    <string name="userCollision">Email is already in use.</string>
    <string name="unexpectedError">Unexpected error.</string>
    <string name="poster">poster</string>
    <string name="sing_in">Sing in</string>
    <string name="login">login</string>
    <string name="sing_up">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_movies">All movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="back_to_sign_in">Back to sign in</string>
</resources>
