<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="@android:color/darker_gray"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:scaleType="center" />


                <TextView
                    android:id="@+id/plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="@android:color/darker_gray"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:singleLine="false"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/year"
                    style="@style/detail"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/rated"
                    style="@style/detail"
                    android:text="@string/rated" />

                <TextView
                    android:id="@+id/released"
                    style="@style/detail"
                    android:text="@string/released" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/detail"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/director"
                    style="@style/detail"
                    android:text="@string/director" />

                <TextView
                    android:id="@+id/runtime"
                    style="@style/detail"
                    android:text="@string/runtime" />

                <TextView
                    android:id="@+id/writer"
                    style="@style/detail"
                    android:text="@string/writer" />

                <TextView
                    android:id="@+id/actors"
                    style="@style/detail"
                    android:text="@string/actors" />

                <TextView
                    android:id="@+id/metascore"
                    style="@style/detail"
                    android:text="@string/metascore" />

                <TextView
                    android:id="@+id/dvd"
                    style="@style/detail"
                    android:text="@string/dvd" />

                <TextView
                    android:id="@+id/boxOffice"
                    style="@style/detail"
                    android:text="@string/box_office" />

                <TextView
                    android:id="@+id/production"
                    style="@style/detail"
                    android:text="@string/production" />

                <TextView
                    android:id="@+id/website"
                    style="@style/detail"
                    android:text="@string/website" />


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>
