<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragments.SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/textInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="yes"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/backButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_sign_in" />

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>
